hero section updated

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --font-google: "Google Sans Code", monospace;
   --font-sora: "Sora", sans-serif;
   --font-questrial: "Questrial", sans-serif;
+  --font-DM: "DM Sans", sans-serif;
 
   --color-border: hsl(var(--border));
   --color-background: hsl(var(--background));
